fix margin in item summary on mobile

--- a/src/view/frontend/web/css/clean-checkout-l.css
+++ b/src/view/frontend/web/css/clean-checkout-l.css
@@ -69,10 +69,6 @@
     margin-bottom: 0px;
 }
 
-.opc-block-summary .items-in-cart {
-    margin-bottom: 20px;
-}
-
 .opc-wrapper .step-title {
     padding-bottom: 0px;
 }
